// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with fallback 1`] = `
<span
  class="flex-shrink-0 rounded-full w-10 h-10 overflow-hidden"
>
  <span>
    <img
      alt="fallback"
      src="https://source.boringavatars.com/beam/120/fallback?colors=665c52,74b3a7,a3ccaf,E6E1CF,CC5B14"
    />
  </span>
</span>
`;

exports[`Avatar renders correctly with smallSrc 1`] = `
<div
  class="flex-shrink-0 rounded-full w-7 h-7"
>
  <svg
    height="100%"
    role="none"
    viewBox="0 0 100 100"
    width="100%"
  >
    <mask
      id="circle-mask-:r1:"
    >
      <circle
        cx="50%"
        cy="50%"
        fill="white"
        r="50%"
      />
      <circle
        cx="80%"
        cy="80%"
        fill="black"
        r="24%"
      />
    </mask>
    <image
      class="overflow-hidden"
      height="100%"
      mask="url(#circle-mask-:r1:)"
      width="100%"
      xlink:href="https://example.com/avatar.png"
    />
    <image
      height="40%"
      width="40%"
      x="60%"
      xlink:href="https://example.com/small-avatar.png"
      y="60%"
    />
  </svg>
</div>
`;

exports[`Avatar renders correctly with src 1`] = `
<span
  class="flex-shrink-0 rounded-full w-10 h-10 overflow-hidden"
>
  <span>
    <img
      alt="fallback"
      src="https://source.boringavatars.com/beam/120/?colors=665c52,74b3a7,a3ccaf,E6E1CF,CC5B14"
    />
  </span>
</span>
`;
